<resources>
    <string name="app_name">OwenTacToe</string>
    <string name="button_placeholder"></string>
    <string name="win_text_placeholder"></string>
    <string name="new_game_btn">New Game</string>
    <string name="welcome_msg" >Welcome to Owen\'s\nTicTacToe App!</string>
    <string name="start_game_btn">Start Game</string>
    <string name="exit_game_btn">Back to Menu</string>
    <string name="start_9x9_game_btn">Start 9x9 Game</string>
</resources>